--- a/app/src/main/resources/ventanaLogin.fxml
+++ b/app/src/main/resources/ventanaLogin.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -16,8 +17,8 @@
          <children>
             <VBox minHeight="320.0" minWidth="480.0" spacing="30.0" style="-fx-background-color: lightblue;">
                <children>
-                  <TextField fx:id="usuario" />
-                  <TextField fx:id="contrasenia" />
+                  <TextField fx:id="usuario" promptText="Usuario" />
+                  <PasswordField fx:id="contrasenia" promptText="Contraseña" />
                   <Button minHeight="60.0" minWidth="450.0" mnemonicParsing="false" onAction="#botonLogin" text="Login">
                      <VBox.margin>
                         <Insets top="15.0" />
